--- a/css-files/css.html
+++ b/css-files/css.html
@@ -12,12 +12,15 @@
             height:28px;
             width:78%;
             font-size: 23px;
+            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         }
         h1{
             color:green;
+            text-align: center;
         }
         #special{
             color: magenta;
+            font-weight: 300;
         }
         .common{
             background-color: lightcoral;
