--- a/blog.html
+++ b/blog.html
@@ -47,5 +47,6 @@
     <small>authore: <span class="rong">nayok khan</span></small>
     <p>I went to that place with my friends. Fascinating beauty of this Haore caught my attention. My journey was a remarkable one among the history of Sylhet.I went to that place with my friends. Fascinating beauty of this Haore caught my attention. My journey was a remarkable one among the history of Sylhet. I went to that place with my friends. Fascinating beauty of this Haore caught my attention. My journey was a remarkable one among the history of SylhetI went to that place with my friends. Fascinating beauty of this Haore caught my attention. My journey was a remarkable one among the history of Sylhet.</p>
     </div>
+    <div>Ok guys, thanks for coming. I wil see you in my next session. Stay tuned!</div>
 </body>
 </html>
