--- a/blog.html
+++ b/blog.html
@@ -32,20 +32,20 @@
 <body>
     <div class="div">
         <h1 id="special">Welcome To My Traveling Blog.</h1>
-    <h3>Last month I was in Tanguar Haore</h3>
-    <small>authore: <span class="rong">nayok khan</span></small>
-    <p>I went to that place with my friends. Fascinating beauty of this Haore caught my attention. My journey was a remarkable one among the history of Sylhet.I went to that place with my friends. Fascinating beauty of this Haore caught my attention. My journey was a remarkable one among the history of Sylhet. I went to that place with my friends. Fascinating beauty of this Haore caught my attention. My journey was a remarkable one among the history of SylhetI went to that place with my friends. Fascinating beauty of this Haore caught my attention. My journey was a remarkable one among the history of Sylhet.</p>
+    <h3>Last month I was in Tanguar haour</h3>
+    <small>author: <span class="rong">nayok khan</span></small>
+    <p>I went to that place with my friends. Fascinating beauty of this place caught my attention. My journey was a remarkable one among the history of Sylhet.I went to that place with my friends. Fascinating beauty of this place caught my attention. My journey was a remarkable one among the history of Sylhet. I went to that place with my friends. Fascinating beauty of this place caught my attention. My journey was a remarkable one among the history of SylhetI went to that place with my friends. Fascinating beauty of this place caught my attention. My journey was a remarkable one among the history of Sylhet.</p>
     </div>
 
     <div class="div">
     <h3>Last month I was in kashmir</h3>
-    <small>authore: <span class="rong">nayok khan</span></small>
-    <p>I went to that place with my friends. Fascinating beauty of this Haore caught my attention. My journey was a remarkable one among the history of Sylhet.I went to that place with my friends. Fascinating beauty of this Haore caught my attention. My journey was a remarkable one among the history of Sylhet. I went to that place with my friends. Fascinating beauty of this Haore caught my attention. My journey was a remarkable one among the history of SylhetI went to that place with my friends. Fascinating beauty of this Haore caught my attention. My journey was a remarkable one among the history of Sylhet.</p>
+    <small>author: <span class="rong">nayok khan</span></small>
+    <p>I went to that place with my friends. Fascinating beauty of this place caught my attention. My journey was a remarkable one among the history of Sylhet.I went to that place with my friends. Fascinating beauty of this place caught my attention. My journey was a remarkable one among the history of Sylhet. I went to that place with my friends. Fascinating beauty of this place caught my attention. My journey was a remarkable one among the history of SylhetI went to that place with my friends. Fascinating beauty of this place caught my attention. My journey was a remarkable one among the history of Sylhet.</p>
     </div>
     <div class="div">
     <h3>Last month I was in Ladakh</h3>
-    <small>authore: <span class="rong">nayok khan</span></small>
-    <p>I went to that place with my friends. Fascinating beauty of this Haore caught my attention. My journey was a remarkable one among the history of Sylhet.I went to that place with my friends. Fascinating beauty of this Haore caught my attention. My journey was a remarkable one among the history of Sylhet. I went to that place with my friends. Fascinating beauty of this Haore caught my attention. My journey was a remarkable one among the history of SylhetI went to that place with my friends. Fascinating beauty of this Haore caught my attention. My journey was a remarkable one among the history of Sylhet.</p>
+    <small>author: <span class="rong">nayok khan</span></small>
+    <p>I went to that place with my friends. Fascinating beauty of this place caught my attention. My journey was a remarkable one among the history of Sylhet.I went to that place with my friends. Fascinating beauty of this place caught my attention. My journey was a remarkable one among the history of Sylhet. I went to that place with my friends. Fascinating beauty of this place caught my attention. My journey was a remarkable one among the history of SylhetI went to that place with my friends. Fascinating beauty of this place caught my attention. My journey was a remarkable one among the history of Sylhet.</p>
     </div>
     <div><p>Ok guys, thanks for coming. I wil see you in my next session. Stay tuned! Good bye!</p></div>
 </body>
